--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html lang="da">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <title>master</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout_index.css">
     <link rel="stylesheet" href="mutual_styles.css">
 </head>
-
 <body>
-    <div class="page-container">
-        <img src="Veranda.png" alt="rammen">
-    </div>
 
-    <h1>hej</h1>
+    <header>
+<input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
+    <nav class="navbar">
+        <ul class="menu">
+            <li><a href="index.html">Front page</a></li>
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="merge.html">Merge</a></li>
+            <li><a href="press.html">Press</a></li>
+        </ul>
+    </nav>
 
+    </header>
 
+    <main>
+<div class="screen">
+ <img class="logo" src="img_press/logo_pinkmaane.svg" alt="logo">
+ </div>
+</main>
+
+<footer>
+    
+</footer>
+
+<script src="login.js"></script>
 </body>
-
 </html>
