--- a/press.html
+++ b/press.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>master</title>
     <link rel="stylesheet" href="mutual_styles.css">
-    <link rel="stylesheet" href="layout_press.css">
+    <link rel="stylesheet" href="press.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
