--- a/merge.html
+++ b/merge.html
@@ -1,1 +1,147 @@
-hejsa
+<!DOCTYPE html>
+<html lang="da">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Merch</title>
+    <style>
+        @font-face {
+            font-family: 'VerandaFont';
+            src: url('Apoc-BoldItalic.woff') format('woff');
+            src: url('Apoc-BoldItalic.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        header {
+            background-color: #ffffff;
+            color: rgb(11, 11, 11);
+            text-align: center;
+            padding: 1em;
+            font-family: VerandaFont;
+        }
+
+        header img {
+            width: 200px;
+            height: auto;
+        }
+
+        section {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .merch-item1 {
+            flex: 0 0 calc(33.33% - 20px);
+            /* 3 items per row with some margin */
+            margin: 10px;
+            cursor: auto;
+        }
+
+        /* Define the default image style */
+        .merch-item1 img {
+            width: 100%;
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .merch-item2 {
+            flex: 0 0 calc(33.33% - 20px);
+            /* 3 items per row with some margin */
+            margin: 10px;
+        }
+
+        /* Define the default image style */
+        .merch-item2 img {
+            width: 100%;
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .merch-item3 {
+            flex: 0 0 calc(33.33% - 20px);
+            /* 3 items per row with some margin */
+            margin: 10px;
+        }
+
+        /* Define the default image style */
+        .merch-item3 img {
+            width: 100%;
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
+
+
+        /* Define the hover effect with different images for each merch item */
+        .merch-item1:hover img {
+            transform: scale(1.2);
+            /* You can adjust the scale factor */
+            content: url('/photos/merch1.png');
+            /* Set the hover image for Merchandise 1 */
+        }
+
+        .merch-item2:hover img {
+            transform: scale(1.2);
+            /* You can adjust the scale factor */
+            content: url('/photos/merch3.png');
+            /* Set the hover image for Merchandise 1 */
+        }
+
+        .merch-item3:hover img {
+            transform: scale(1.2);
+            /* You can adjust the scale factor */
+            content: url('/photos/merch5.png');
+            /* Set the hover image for Merchandise 1 */
+        }
+
+        @media (max-width: 768px) {
+            section {
+                flex-direction: column;
+                /* Change flex-direction to column for mobile devices */
+            }
+
+            .merch-item {
+                flex: 0 0 100%;
+                /* Set to 100% width on mobile devices */
+            }
+
+            header p {
+                margin: 10px;
+            }
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>Merch</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </header>
+
+    <section>
+        <div class="merch-item1">
+            <img src="/photos/tshirts.png" alt="Merchandise 1">
+        </div>
+        <div class="merch-item2">
+            <img src="/photos/totebags.png" alt="Merchandise 2">
+        </div>
+        <div class="merch-item3">
+            <img src="/photos/lighters.png" alt="Merchandise 3">
+        </div>
+    </section>
+
+</body>
+
+
+</html>
