--- a/events.html
+++ b/events.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-
+    <div class="logo">
+        <a href="index.html">
+            <img src="img/logo_blue.png" alt="logo">
+        </a>
+    </div>
     <div class="container">
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
