--- a/about_us.html
+++ b/about_us.html
@@ -24,6 +24,15 @@
             </ul>
         </nav>
 
+        <h1>About us</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam mollitia dicta labore ipsum a veniam
+            placeat non voluptatem! Animi eum inventore nulla eius magnam consectetur, sit expedita nobis debitis
+            voluptatum.
+        </p>
+        <img src="img_press/foran.webp" alt="foran">
+        <img src="img_press/mad.webp" alt="mad">
+        <img src="img_press/vin.webp" alt="vin">
 
 </body>
 
