--- a/merge.html
+++ b/merge.html
@@ -86,21 +86,21 @@
         .merch-item1:hover img {
             transform: scale(1.2);
             /* You can adjust the scale factor */
-            content: url('/photos/merch1.png');
+            content: url('/merchphotos/merch1.png');
             /* Set the hover image for Merchandise 1 */
         }
 
         .merch-item2:hover img {
             transform: scale(1.2);
             /* You can adjust the scale factor */
-            content: url('/photos/merch3.png');
+            content: url('/merchphotos/merch3.png');
             /* Set the hover image for Merchandise 1 */
         }
 
         .merch-item3:hover img {
             transform: scale(1.2);
             /* You can adjust the scale factor */
-            content: url('/photos/merch5.png');
+            content: url('/merchphotos/merch5.png');
             /* Set the hover image for Merchandise 1 */
         }
 
@@ -131,13 +131,13 @@
 
     <section>
         <div class="merch-item1">
-            <img src="/photos/tshirts.png" alt="Merchandise 1">
+            <img src="/merchphotos/tshirts.png" alt="Merchandise 1">
         </div>
         <div class="merch-item2">
-            <img src="/photos/totebags.png" alt="Merchandise 2">
+            <img src="/merchphotos/totebags.png" alt="Merchandise 2">
         </div>
         <div class="merch-item3">
-            <img src="/photos/lighters.png" alt="Merchandise 3">
+            <img src="/merchphotos/lighters.png" alt="Merchandise 3">
         </div>
     </section>
 
