--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <div class="screen">
-            <img class="logo" src="img_press/logo_pinkmaane.svg" alt="logo">
+            <img class="logo" src="img/logo_pinkmaane.svg" alt="logo">
         </div>
     </main>
 
