--- a/press.html
+++ b/press.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,34 +13,42 @@
 <body>
     <header></header>
 
-<main>
-<!-- <div class="screen"> -->
-<h1>Press</h1>
+    <main>
+        <!-- <div class="screen"> -->
+        <h1>Press</h1>
 
-<div class="container_1_1">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
-    <img class="img1" src="img_press/dummy-image.webp" alt="dummy">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
+        <div class="container_1_1">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui
+                perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos
+                dolore qui numquam.</p>
+            <img class="img1" src="img_press/dummy-image.webp" alt="dummy">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui
+                perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos
+                dolore qui numquam.</p>
 
-</div>
+        </div>
 
-<div class="container2_1_1">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
-    <img class="order" src="img_press/dummy-image.webp" alt="dummy">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
+        <div class="container2_1_1">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui
+                perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos
+                dolore qui numquam.</p>
+            <img class="order" src="img_press/dummy-image.webp" alt="dummy">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui
+                perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos
+                dolore qui numquam.</p>
 
-</div>
+        </div>
 
-<!-- </div> -->
-</main>
+        <!-- </div> -->
+    </main>
 
-<footer>
-    <p>Monday - Saturday: 14:00 - 00:00</p>
-    <p>Griffenfeldsgade 17</p>
-    <a href="https://www.instagram.com/verandavin/">Instagram logo her</a>
-    <!-- link til mail her? gmail? -->
-    
-</footer>
+    <footer>
+        <p>Monday - Saturday: 14:00 - 00:00</p>
+        <p>Griffenfeldsgade 17</p>
+        <a href="https://www.instagram.com/verandavin/">Instagram logo her</a>
+        <!-- link til mail her? gmail? -->
+
+    </footer>
 </body>
 
 </html>
