--- a/about_us.html
+++ b/about_us.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+
+    <div class="logo">
+        <a href="index.html">
+            <img src="img_press/logo_blue-2.webp" alt="logo">
+        </a>
+    </div>
     <div class="container">
         <input type="checkbox" id="menu-toggle" class="menu-toggle">
         <label for="menu-toggle" class="burger-menu">&#9776;</label>
