--- a/press.html
+++ b/press.html
@@ -18,14 +18,14 @@
 
 <div class="container_1_1">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
-    <img class="img1" src="img_press/dummy-image.webp" alt="dummy">
+    <img class="img1" src="img/dummy-image.webp" alt="dummy">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
 
 </div>
 
 <div class="container2_1_1">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
-    <img class="order" src="img_press/dummy-image.webp" alt="dummy">
+    <img class="order" src="img/dummy-image.webp" alt="dummy">
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, obcaecati doloribus, non qui perferendis quod incidunt minus earum iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore qui numquam.</p>
 
 </div>
@@ -37,7 +37,9 @@
     <p>Monday - Saturday: 14:00 - 00:00</p>
     <p>Griffenfeldsgade 17</p>
     <a href="https://www.instagram.com/verandavin/">Instagram logo her</a>
-    <!-- link til mail her? gmail? -->
+    <!-- mail-->
+    <!-- cookie side -->
+    <!-- smiley side -->
     
 </footer>
 </body>
