--- a/events.html
+++ b/events.html
@@ -15,21 +15,23 @@
             <img src="img/logo_blue.png" alt="logo">
         </a>
     </div>
-    <div class="container">
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="burger-menu">&#9776;</label>
-        <nav class="navbar">
-            <ul class="menu">
-                <li><a href="index.html">Front page</a></li>
-                <li><a href="about_us.html">About us</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="merge.html">Merge</a></li>
-                <li><a href="press.html">Press</a></li>
-            </ul>
-        </nav>
-    </div>
+    <nav>
+        <ul class="menu">
+            <li><a href="index.html">Front page</a></li>
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="merge.html">Merge</a></li>
+            <li><a href="press.html">Press</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+    </nav>
 
 
+    <script src="script.js"></script>
 </body>
 
 </html>
