--- a/press.html
+++ b/press.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="border">
     <header></header>
 
     <main>
@@ -41,6 +42,7 @@
     <!-- link til mail her? gmail? -->
     
 </footer>
+</div>
 </body>
 
 </html>
