--- a/press.html
+++ b/press.html
@@ -12,7 +12,30 @@
 
 <body>
     <div class="border">
-    <header></header>
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/logo_blue.png" alt="Logo">
+                </a>
+            </div>
+
+            <ul class="menu">
+<li><a href="about_us.html">About us</a></li>
+<li><a href="events.html">Events</a></li>
+<li><a href="giftcard.html">Giftcard</a></li>
+<li><a href="merge.html">Merch</a></li>
+<li><a href="press.html">Press</a></li>
+            </ul>
+
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+
+        </nav>
+    </header>
 
     <main>
         <!-- <div class="screen"> -->
