--- a/press.html
+++ b/press.html
@@ -46,7 +46,7 @@
             iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore
             qui numquam.
           </p>
-          <img class="img1" src="img/dummy-image.webp" alt="dummy" />
+          <img class="img1" src="img/dummy-image.webp" alt="dummt" />
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
             obcaecati doloribus, non qui perferendis quod incidunt minus earum
@@ -81,5 +81,6 @@
         <!-- link til mail her? gmail? -->
       </footer>
     </div>
+    <script src="menu.js"></script>
   </body>
 </html>
