--- a/events.html
+++ b/events.html
@@ -32,6 +32,17 @@
         </div>
     </nav>
 
+    <h1>Events</h1>
+
+    <p>At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time on.
+        Join us every Saturday for a special treat – OYSTER SATURDAYS which is our hopefully forever ongoing event.
+    </p>
+
+    <div class="grid1">
+        <img src="path/to/first/image.jpg" alt="First Image">
+        <img src="path/to/second/image.jpg" alt="Second Image">
+    </div>
+
     <script>
         // Erstat med din egen adgangstoken og bruger-id
         const accessToken = '2efc73cd5eae8b060caec873f9be9e8f';
