--- a/press.html
+++ b/press.html
@@ -15,7 +15,7 @@
         <nav>
           <div class="logo">
             <a href="index.html">
-              <img src="img/logo_blue.png" alt="Logo" />
+              <img src="img/logo_blue.webp" alt="Logo" />
             </a>
           </div>
 
