--- a/events.html
+++ b/events.html
@@ -14,18 +14,28 @@
 
     <h1>Events</h1>
 
-    <p>At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time
+    <div class="tekst1">
+        At Veranda, we continuously strive to curate events that we ourselves would appreciate spending our own time
         on.
-        Join us every Saturday for a special treat. OYSTER SATURDAYS which is our hopefully forever ongoing event.
-    </p>
+    </div>
 
     <div class="grid1">
         <img src="img_events/østers_skilt.webp" alt="First Image">
         <img src="img_events/østers_skilt.webp" alt="Second Image">
     </div>
 
+    <div class="tekst2">Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
+        ongoing event.
+    </div>
 
+    <div class="tekst3">
+        Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
+    </div>
 
+    <div class="tekst4">
+        Stay in the loop by following us on Instagram, where we regularly update you on upcoming events.Interested in
+        collaborating with us? Feel free to share your ideas with us at info@verandavin.dk
+    </div>
 
     <script src="menu.js"></script>
 </body>
