--- a/press.html
+++ b/press.html
@@ -36,42 +36,51 @@
       </header>
 
       <main>
-        <!-- <div class="screen"> -->
         <h1>Press</h1>
 
         <div class="container_1_1">
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
-            obcaecati doloribus, non qui perferendis quod incidunt minus earum
-            iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore
-            qui numquam.
+          <p class="p_press">
+            "You will not find most of their products anywhere else. Retrieved
+            from family businesses and made in limited batches where there is a
+            minimum to no additives."
+            <br /><br />
+            - Wonderful Copenhagen
           </p>
-          <img class="img1" src="img/dummy-image.webp" alt="dummt" />
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
-            obcaecati doloribus, non qui perferendis quod incidunt minus earum
-            iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore
-            qui numquam.
+          <div class="center_img">
+            <img class="img1" src="img_press/press_img4.jpg" alt="Kombucha" />
+          </div>
+          <p class="p_press">
+            “Her kan du om dagen spise enkle serveringer og købe vin med hjem,
+            og når mørket falder på, er der uprætentiøse drinks og vine for
+            alle.”
+            <br /><br />
+            - Copenhagen Food
           </p>
         </div>
 
         <div class="container2_1_1">
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
-            obcaecati doloribus, non qui perferendis quod incidunt minus earum
-            iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore
-            qui numquam.
+          <p class="p_press">
+            "Det søde personale bag baren sørger altid for en uformel og
+            hyggelig atmosfære, og hver lørdag inviterer de til Oyster Saturday:
+            Her kan du nyde østers med citron og vinegrette til bare 25 kr.
+            stykket."
+            <br /><br />
+            - Bo Bedre
           </p>
-          <img class="order" src="img/dummy-image.webp" alt="dummy" />
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora,
-            obcaecati doloribus, non qui perferendis quod incidunt minus earum
-            iure magnam vel quisquam fugit facilis. Cupiditate esse quos dolore
-            qui numquam.
+
+          <div class="center_img">
+            <img class="order" src="img_press/press_img3.jpg" alt="Oysters" />
+          </div>
+
+          <p class="p_press">
+            "Den lille, lokale bar og café på Nørrebro byder både på vin, øl og
+            forskellige småretter. Så mødes I bare til noget at drikke, kan I
+            nemt fortsætte til maden, hvis snakken går som smurt. Den hyggelige
+            atmosfære indenfor er perfekt til en romantisk date."
+            <br /><br />
+            - Elle
           </p>
         </div>
-
-        <!-- </div> -->
       </main>
 
       <footer>
