--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="index.html">Front page</a></li>
           <li><a href="about_us.html">About us</a></li>
           <li><a href="events.html">Events</a></li>
-          <li><a href="merge.html">Merge</a></li>
+          <li><a href="merge.html">Merch</a></li>
           <li><a href="press.html">Press</a></li>
         </ul>
       </nav>
