ronja burgermenu i index, ramme virker ikke

--- a/index.html
+++ b/index.html
@@ -10,29 +10,40 @@
   </head>
 
   <body>
+    <div class="screen"></div>
     <header>
-      <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-      <label for="menu-toggle" class="burger-menu">&#9776;</label>
+      <nav>
+        <div class="logo">
+          <a href="index.html">
+            <img src="img/logo_blue.png" alt="Logo" />
+          </a>
+        </div>
 
-      <nav class="navbar">
         <ul class="menu">
-          <li><a href="index.html">Front page</a></li>
           <li><a href="about_us.html">About us</a></li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="giftcard.html">Giftcard</a></li>
           <li><a href="merge.html">Merch</a></li>
           <li><a href="press.html">Press</a></li>
         </ul>
+
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
       </nav>
     </header>
 
     <main>
-      <div class="screen">
+      
         <img class="logo" src="img/logo_pinkmaane.svg" alt="logo" />
-      </div>
+    
     </main>
 
     <footer></footer>
 
-    <script src="login.js"></script>
+    <script src="menu.js"></script>
+  </div>
   </body>
 </html>
