--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>master</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="mutual_styles.css" />
-  </head>
 
-  <body>
-    <header>
-      <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-      <label for="menu-toggle" class="burger-menu">&#9776;</label>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>master</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="mutual_styles.css" />
+</head>
 
-      <nav class="navbar">
-        <ul class="menu">
-          <li><a href="index.html">Front page</a></li>
-          <li><a href="about_us.html">About us</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="merge.html">Merch</a></li>
-          <li><a href="press.html">Press</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header>
+    <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+    <label for="menu-toggle" class="burger-menu">&#9776;</label>
 
-    <main>
-      <div class="screen">
-        <img class="logo" src="img/logo_pinkmaane.svg" alt="logo" />
-      </div>
-    </main>
+    <nav class="navbar">
+      <ul class="menu">
+        <li><a href="index.html">Front page</a></li>
+        <li><a href="about_us.html">About us</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="merge.html">Merch</a></li>
+        <li><a href="press.html">Press</a></li>
+        <li><a href="giftcard.html">Giftcard</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <footer></footer>
+  <main>
+    <div class="screen">
+      <img class="logo" src="img/logo_pinkmaane.svg" alt="logo" />
+    </div>
+  </main>
 
-    <script src="login.js"></script>
-  </body>
+  <footer></footer>
+
+  <script src="login.js"></script>
+</body>
+
 </html>
