--- a/merge.html
+++ b/merge.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mutual_styles.css">
+
     <title>Merch</title>
     <style>
         @font-face {
@@ -122,24 +124,28 @@
     </style>
 </head>
 
-<body>
 
-    <header>
-        <h1>Merch</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-    </header>
+<header>
+    <h1>Merch</h1>
+    <p>At Veranda, we offer a curated selection of limited-edition merchandise that reflects the style and
+        quality we appreciate. Our merchandise is available in limited quantities, chosen with care to align with our
+        own
+        preferences. It's your chance to take a piece of Veranda home with you.
+        Drop by and explore our collection – you might just find the perfect item that suits your taste and adds a
+        touch of Veranda to your daily life.</p>
+</header>
 
-    <section>
-        <div class="merch-item1">
-            <img src="/merchphotos/tshirts.png" alt="Merchandise 1">
-        </div>
-        <div class="merch-item2">
-            <img src="/merchphotos/totebags.png" alt="Merchandise 2">
-        </div>
-        <div class="merch-item3">
-            <img src="/merchphotos/lighters.png" alt="Merchandise 3">
-        </div>
-    </section>
+<section>
+    <div class="merch-item1">
+        <img src="/merchphotos/tshirts.png" alt="Merchandise 1">
+    </div>
+    <div class="merch-item2">
+        <img src="/merchphotos/totebags.png" alt="Merchandise 2">
+    </div>
+    <div class="merch-item3">
+        <img src="/merchphotos/lighters.png" alt="Merchandise 3">
+    </div>
+</section>
 
 </body>
 
