--- a/events.html
+++ b/events.html
@@ -8,9 +8,36 @@
     <link rel="stylesheet" href="layout_events.css">
     <link rel="stylesheet" href="mutual_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
 
 <body>
+
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/logo_blue.webp" alt="Logo" />
+                </a>
+            </div>
+
+            <ul class="menu">
+                <li><a href="about_us.html">About us</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="giftcard.html">Giftcard</a></li>
+                <li><a href="merge.html">Merch</a></li>
+                <li><a href="press.html">Press</a></li>
+            </ul>
+
+            <div class="burger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+        </nav>
+    </header>
+
+
     <h1>Events</h1>
 
     <div class="tekst1">
@@ -41,7 +68,6 @@
             <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="mailto:info@verandavin.dk" class="newsletter-icon"><i class="far fa-envelope"></i></a>
         </div>
-
 
         <div class="tekst_footer">
             All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
