--- a/merge.html
+++ b/merge.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mutual_styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <title>Merch</title>
     <style>
@@ -124,28 +125,64 @@
     </style>
 </head>
 
+<body>
+    <nav>
+        <div class="logo">
+            <a href="index.html">
+                <img src="img/logo_blue.webp" alt="Logo" />
+            </a>
+        </div>
 
-<header>
-    <h1>Merch</h1>
-    <p>At Veranda, we offer a curated selection of limited-edition merchandise that reflects the style and
-        quality we appreciate. Our merchandise is available in limited quantities, chosen with care to align with our
-        own
-        preferences. It's your chance to take a piece of Veranda home with you.
-        Drop by and explore our collection – you might just find the perfect item that suits your taste and adds a
-        touch of Veranda to your daily life.</p>
-</header>
+        <ul class="menu">
+            <li><a href="about_us.html">About us</a></li>
+            <li><a href="events.html">Events</a></li>
+            <li><a href="giftcard.html">Giftcard</a></li>
+            <li><a href="merge.html">Merch</a></li>
+            <li><a href="press.html">Press</a></li>
+        </ul>
 
-<section>
-    <div class="merch-item1">
-        <img src="/merchphotos/tshirts.png" alt="Merchandise 1">
-    </div>
-    <div class="merch-item2">
-        <img src="/merchphotos/totebags.png" alt="Merchandise 2">
-    </div>
-    <div class="merch-item3">
-        <img src="/merchphotos/lighters.png" alt="Merchandise 3">
-    </div>
-</section>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+    </nav>
+
+    <header>
+        <h1>Merch</h1>
+        <p>At Veranda, we offer a curated selection of limited-edition merchandise that reflects the style and
+            quality we appreciate. Our merchandise is available in limited quantities, chosen with care to align with
+            our
+            own
+            preferences. It's your chance to take a piece of Veranda home with you.
+            Drop by and explore our collection – you might just find the perfect item that suits your taste and adds a
+            touch of Veranda to your daily life.</p>
+    </header>
+
+    <section>
+        <div class="merch-item1">
+            <img src="/merchphotos/tshirts.png" alt="Merchandise 1">
+        </div>
+        <div class="merch-item2">
+            <img src="/merchphotos/totebags.png" alt="Merchandise 2">
+        </div>
+        <div class="merch-item3">
+            <img src="/merchphotos/lighters.png" alt="Merchandise 3">
+        </div>
+    </section>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/verandavin/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:info@verandavin.dk" class="newsletter-icon"><i class="far fa-envelope"></i></a>
+        </div>
+
+
+        <div class="tekst_footer">
+            All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200 København.
+        </div>
+    </footer>
+
+    <script src="menu.js"></script>
 
 </body>
 
