--- a/events.html
+++ b/events.html
@@ -50,18 +50,18 @@
         <img src="img_events/vin_plakat.webp" alt="Second Image">
     </div>
 
-    <div class="tekst2">Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
+    <p>Join us every Saturday for a special treat - OYSTER SATURDAYS which is our hopefully forever
         ongoing event.
-    </div>
+    </p>
 
-    <div class="tekst3">
+    <p>
         Our venue plays host to a variety of events featuring chefs, DJs, and sommeliers from around the world.
-    </div>
+    </p>
 
-    <div class="tekst4">
+    <p>
         Stay in the loop by following us on Instagram, where we regularly update you on upcoming events.Interested in
         collaborating with us? Feel free to share your ideas with us at info@verandavin.dk
-    </div>
+    </p>
 
     <footer>
         <div class="social-icons">
