--- a/merge.html
+++ b/merge.html
@@ -18,10 +18,10 @@
         }
 
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            margin: 1cm;
+            border: 2px solid #283274;
             box-sizing: border-box;
+            background-color: #f9f2f2;
         }
 
         header img {
