smiley i press ronja

--- a/press.html
+++ b/press.html
@@ -122,6 +122,9 @@
         All Right Reserved @Veranda Vin Aps - Griffenfeldsgade 17, 2200
         København.
       </div>
+      <div class="tekst_footer2">
+            <a href="https://www.findsmiley.dk/757360">Smiley</a>
+        </div>
     </footer>
     <script src="menu.js"></script>
   </body>
